crates/rargs/tests/snapshots/test_scripts__impl-57.snap
---
source: crates/rargc/tests/test_scripts.rs
description: "[stderr] commands-default.sh "
expression: "String::from_utf8(match \"stderr\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
[31mMissing required option: [33msource[31m[0m

Upload a file

[4mAlias:[0m u

[4mUsage:[0m
  upload [OPTIONS] SOURCE
  upload -h|--help

[4mArguments:[0m
  SOURCE
    URL to download from
    [@required]

[4mOptions:[0m
  -f --force
    Force upload
  -h --help
    Print help

